--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -33,8 +33,11 @@
             </div>
 
             <div id = "FootBarContainer">
-                <span id = "NumCommentsLabel">0</span>
                 <img id = "CommentsLabel" />
+                <div id = "NumCommentsLabelContainer">
+                    <img id = "NumCommentsIcon" />
+                    <span id = "NumCommentsLabel">0</span>
+                </div>
             </div>
 
             <div id="whiteBoard">
