--- a/POIProxy/CSS/poi.css
+++ b/POIProxy/CSS/poi.css
@@ -71,28 +71,35 @@ textarea {
 #FootBarContainer
 {
     border-radius: 3px;
-    position: absolute; top: 93%; left: 93%; height: 5%; width: 5%;
-    background-color: White;
-    border-style:solid;
-    border-color:Black;
-    border-width: 1px; 
+    position: absolute; top: 90%; left: 94%; height: 6%; width: 6%;
 }   
+
+#NumCommentsLabelContainer
+{
+    position: absolute; width: 70%; height: 70%; top: 0%; left: 0%;
+}
+
+#CommentsLabel
+{
+    position: absolute; height: 100%; width: 100%; top: 0%; left:0%;  
+} 
+
+#NumCommentsLabelContainer > img
+{
+    position: absolute; width: 100%; height: 100%; top: 0%; left: 0%;
+}
 
 #NumCommentsLabel
 {
     position: absolute;
-    width: 30%;
-    height: 10%;
-    line-height: 10%;
+    width: 100%;
+    height: 20%;
+    line-height: 20%;
     top: 45%;
     left: 0%;
     text-align:center;
-} 
-
-#CommentsLabel
-{
-    position: absolute; height: 90%; width: 65%; top: 5%; left:32%;  
-}     
+    color:Green;
+}    
             
 .MainSlideView
 {
