--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+﻿<!DOCTYPE HTML>
 <html>
     <head>
         <title>POI Interactive Presentation Board</title>
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-        @RenderBody()
+        
         <div id = "PresBoard" align="center">
             <div id = "Logo"><img /></div>
 
@@ -30,7 +30,9 @@
                         <img class = "MainSlideView" alt="" src="" />
                     </div>
                 </div>
+                
             </div>
+
 
             <div id = "FootBarContainer">
                 <img id = "CommentsLabel" />
@@ -51,5 +53,6 @@
             </div>
         </div>
 
+        @RenderBody()
         </body>
 </html>
