Add support for slide jump and whiteboard clear

--- a/POIProxy/CSS/poi.css
+++ b/POIProxy/CSS/poi.css
@@ -134,7 +134,7 @@ textarea {
 #canvasStack > img
 {
     
-    position: absolute; width: 100%; height: 100%;
+    position: absolute; width: 100%; height: 100%; left: 0%;
 }
     
 .SlideAbstractView
