--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -6,7 +6,6 @@
     </head>
     <body>
         
-        
         <div id = "PresBoard" align="center">
             <div id = "Logo"><img /></div>
 
@@ -52,6 +51,10 @@
                 <img id = "laserPointer" src="" />
             </div>
         </div>
+
+        <!--video width="640" height="480" controls="controls"-->
+            <!--source src="http://192.168.1.105:8091/content/Streaming/first.m3u8" type="application/vnd.apple.mpegurl"/-->
+        <!--/video-->
 
         @RenderBody()
         </body>
