--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -14,7 +14,11 @@
                 <div id = "PointerItem"><img /></div>
                 <div id = "CommentItem"><img /></div>
                 <div id = "MailItem"><img /></div>
+                <div id = "RecordItem"><img /></div>
+                <div id = "FullscreenButton"><img /></div>
             </div>
+
+            
 
             <div id = "PresBoardSideBarSlideRegion">
                 <div id = "PresBoardSideBarContainer">
