--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -18,7 +18,9 @@
                 <div id = "FullscreenButton"><img /></div>
             </div>
 
-            
+            <div id= "AudioStreamingPlayer">
+                <video controls="controls"></video>
+            </div>
 
             <div id = "PresBoardSideBarSlideRegion">
                 <div id = "PresBoardSideBarContainer">
