--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -72,10 +72,8 @@
 	});
 
     function initAudioStreamingPlayer() {
-        var audioSource =  $('<source>');
-        audioSource.attr('src', "@(Model.AudioStreamingUrl)0/POIAudio.m3u8");
-
-        $("#AudioStreamingPlayer > video").append(audioSource);
+        
+        $("#AudioStreamingPlayer > video").attr('src', "@(Model.AudioStreamingUrl)0/POIAudio.m3u8")
     }
 
     function initVideoTesting() {
