Change video tag to audio tag for streaming

--- a/POIProxy/CSS/poi.css
+++ b/POIProxy/CSS/poi.css
@@ -251,7 +251,7 @@ textarea {
     height: 7%;
 }
 
-#AudioStreamingPlayer > video
+#AudioStreamingPlayer > audio
 {
     position: absolute;
     width: 100%;
