--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -73,7 +73,7 @@
 
     function initAudioStreamingPlayer() {
         
-        $("#AudioStreamingPlayer > video").attr('src', "@(Model.AudioStreamingUrl)0/POIAudio.m3u8")
+        $("#AudioStreamingPlayer > audio").attr('src', "@(Model.AudioStreamingUrl)0/POIAudio.m3u8")
     }
 
     function initVideoTesting() {
