--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -19,7 +19,7 @@
             </div>
 
             <div id= "AudioStreamingPlayer">
-                <video controls="controls"></video>
+                <audio controls="controls"></audio>
             </div>
 
             <div id = "PresBoardSideBarSlideRegion">
