--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -33,6 +33,9 @@
                 <div id = "MainContentContainer">
                     <div id = "PresBoardMainDisplay">
                         <img class = "MainSlideView" alt="" src="" />
+                        <video class = "MainAnimationView">
+                            <source src="" type="video/mp4">
+                        </video>
                     </div>
                 </div>
                 
